apps/test/whoami/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth-whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`whoami.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-forward-auth
    - match: Host(`whoami-ingress-route.stonegarden.dev`)
      kind: Rule
      services:
        - name: whoami
          port: 80
